# django-2-nurmash98

./: db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
news/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_comment_news_id.py  0003_rename_news_id_comment_news.py
news/templates/news/: base.html  detail.html  index.html  update.html
news/templates/registration/: login.html  sign-up.html
