[tool.poetry]
name = "django-2-nurmash98"
version = "0.1.0"
description = ""
authors = ["Nurmash Omarbek <nurmash98@github.com>"]
readme = "README.md"
packages = [{include = "django_2_nurmash98"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
